Se agregó un DataSet con datos sintéticos y se re entrenó el modelo

--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "ba098588",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "1c8e0a61",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "# ---------------------------------------------------------------------------\n",
     "# Configuración\n",
     "# ---------------------------------------------------------------------------\n",
-    "DATA_PATH = Path(\"triageDataSet.csv\")  # Ruta al CSV \n",
+    "DATA_PATH = Path(\"triageDataSet_final_sintetico.csv\")  # Ruta al CSV \n",
     "MODEL_DIR = Path(\"model_artifact\")             # Carpeta de salida\n",
     "MODEL_DIR.mkdir(exist_ok=True)\n",
     "MODEL_PATH = MODEL_DIR / \"news_rf_pipeline.joblib\"\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "269b08c4",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "9f8bcf17",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "cdcdd126",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "be8471bd",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "e9b7fae2",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "93709f21",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "                                        n_jobs=-1, random_state=42))])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "58a90e19",
    "metadata": {},
    "outputs": [
@@ -672,15 +672,15 @@
      "output_type": "stream",
      "text": [
       "[INFO] Evaluando en conjunto de validación…\n",
-      "AUROC: 0.687\n",
+      "AUROC: 0.905\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.577     0.523     0.549       107\n",
-      "           1      0.675     0.721     0.697       147\n",
+      "           0      0.724     0.836     0.776       195\n",
+      "           1      0.878     0.788     0.830       292\n",
       "\n",
-      "    accuracy                          0.638       254\n",
-      "   macro avg      0.626     0.622     0.623       254\n",
-      "weighted avg      0.634     0.638     0.635       254\n",
+      "    accuracy                          0.807       487\n",
+      "   macro avg      0.801     0.812     0.803       487\n",
+      "weighted avg      0.816     0.807     0.809       487\n",
       "\n"
      ]
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "742870b6",
    "metadata": {},
    "outputs": [
